<resources>
    <string name="app_name">AppFirestore</string>
    <string name="edtNome">Digite seu nome</string>
    <string name="edtEndereco">Digite seu endereco</string>
    <string name="edtBairro">Digite seu bairro</string>
    <string name="edtCep">Digite seu CEP</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="btnConsultar">Consultar</string>
    <string name="btnDeletar">Deletar</string>
    <string name="btnAtualizar">Atualizar</string>
    <string name="btnVoltar">Voltar</string>
    <string name="dados">ID: %1$s \nNome: %2$s \nCEP: %3$s \nBairro: %4$s \nEndereco: %5$s\n\n\n</string>
    <string name="edtSelecionarID">Selecione o ID do item que deseja excluir</string>
    <string name="confirmar">Confirmar</string>
    <string name="procurar">Procurar</string>
    <string name="id_da_pessoa">ID da pessoa</string>
</resources>