<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">

    <EditText
        android:id="@+id/edtNome"
        android:hint="@string/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"/>
    <EditText
        android:id="@+id/edtEndereco"
        android:hint="@string/edtEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"/>
    <EditText
        android:id="@+id/edtBairro"
        android:hint="@string/edtBairro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"/>
    <EditText
        android:id="@+id/edtCep"
        android:hint="@string/edtCep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/btnCadastrar"
            android:text="@string/btnCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"/>
        <Button
            android:id="@+id/btnVoltar"
            android:text="@string/btnVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>