<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
>
    <Button
        android:id="@+id/btnNavegarCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCadastrar"/>
    <Button
        android:id="@+id/btnNavegarConsultar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnConsultar"/>

    <Button
        android:id="@+id/btnNavegarDeletar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDeletar" />

    <Button
        android:id="@+id/btnNavegarEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAtualizar" />

</LinearLayout>