<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >
    <EditText
        android:id="@+id/edtSelecionarID"
        android:hint="@string/edtSelecionarID"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="number"
        />
    <Button
        android:id="@+id/btnDeletar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDeletar"/>
    <TextView
        android:id="@+id/txtPessoa"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        />
    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmar"
        android:visibility="invisible"/>
</LinearLayout>